--- a/appData/style.qss
+++ b/appData/style.qss
@@ -34,6 +34,10 @@ QPushButton:pressed {
     background-color: rgb(90, 90, 90);
     outline: 2px
 }
+QPushButton:disabled {
+    background-color: rgb(116, 94, 94);
+    outline: 2px
+}
 
 
 
